--- a/juego.html
+++ b/juego.html
@@ -103,22 +103,27 @@
         const naranja = document.getElementById('naranja')
         const verde = document.getElementById('verde')
         const btnEmpezar = document.getElementById('btnEmpezar')
+        const ULTIMO_NIVEL = 10
   
         class Juego {
           constructor() {
             this.inicializar()
             this.generaSecuencia()
-            this.siguienteNivel()
+            //setTimeout() para que no empiece ta rapido el juego
+             setTimeout(this.siguienteNivel, 1000)
           }
   
           inicializar() {
+            /// de esta forma siempre el metodo eleguir color estara atado la clase Juego
+            // this.elegirColor = this.elegirColor.bind(this)
+            this.siguienteNivel = this.siguienteNivel.bind(this)
             btnEmpezar.classList.add('hide')
-            this.nivel = 7
+            this.nivel = 1
             this.colors = {
-                // celeste: celeste,
-                // violeta: violeta,
-                celeste,
-                violeta, 
+                celeste: celeste,
+                violeta: violeta,
+                // celeste,
+                // violeta, 
                 // es lo mismo poner
                 naranja,
                 verde
@@ -127,11 +132,13 @@
 
           generaSecuencia () {
               //creamos un array lo llenamos con 0 y mapeamos generando un random entre 0 y 3 y redondeamos con Math.floor
-              this.secuencia = new Array(10).fill(0).map(n => Math.floor(Math.random() * 4))
+              this.secuencia = new Array(ULTIMO_NIVEL).fill(0).map(n => Math.floor(Math.random() * 4))
           }
 
           siguienteNivel () {
+              this.subnivel = 0
               this.iluminarSecuencia()
+              this.agregarEventosClick()
           }
 
           transformarNumeroAColor (num) {
@@ -145,6 +152,20 @@
                     return 'naranja'
                 case 3: 
                     return 'verde'    
+            }
+          }
+
+          transformarColorANumero (color) {
+              //en uso de return ya no hace falta el break, el return ya detiene la ejecucion
+            switch (color) {
+                case 'celeste':
+                    return 0
+                case 'violeta':
+                    return 1
+                case 'naranja':
+                    return 2
+                case 'verde': 
+                    return 3    
             }
           }
 
@@ -168,6 +189,49 @@
 
           apagarColor(color) {
               this.colors[color].classList.remove('light')
+          }
+
+          agregarEventosClick () {
+            // agregamos manejadores de eventos o escuchadores de eventos
+            this.colors.celeste.addEventListener('click', this.elegirColor.bind(this))
+            //el bind(this) es para no perder la refernecia y es como atar el metodo con la clase Juego
+            // de esta forma this ya no sera un elemnto de html
+            this.colors.verde.addEventListener('click', this.elegirColor.bind(this))
+            this.colors.violeta.addEventListener('click', this.elegirColor.bind(this))
+            this.colors.naranja.addEventListener('click', this.elegirColor.bind(this))
+          }
+
+          eliminarEventosClick () {
+            this.colors.celeste.removeEventListener('click', this.elegirColor.bind(this))
+            //el bind(this) es para no perder la refernecia y es como atar el metodo con la clase Juego
+            // de esta forma this ya no sera un elemnto de html
+            this.colors.verde.removeEventListener('click', this.elegirColor.bind(this))
+            this.colors.violeta.removeEventListener('click', this.elegirColor.bind(this))
+            this.colors.naranja.removeEventListener('click', this.elegirColor.bind(this))
+          }
+
+          elegirColor (ev) {
+            const nombreColor = ev.target.dataset.color
+            const numeroColor = this.transformarColorANumero(nombreColor)
+            this.iluminarColor(nombreColor)
+            if (numeroColor === this.secuencia[this.subnivel]){
+              this.subnivel++
+              if (this.subnivel === this.nivel) {
+                this.nivel++
+                //ahora tenemos que eliminar los eventos click
+                this.eliminarEventosClick()
+                if (this.nivel === (ULTIMO_NIVEL + 1)) {
+                  //gano!
+                } else {
+                  //agregamos setTimeout para que se espere en llama el siguiente metodo
+                  //aqui solo le indicamos la funcion que tiene que llamar, no la invocamos, 
+                  // para invocarla seria this.siguienteNivel(), con los ()
+                  setTimeout(this.siguienteNivel, 1500)
+                }
+              }
+            } else {
+              //perdio!
+            }
           }
 
         }
