--- a/juego.html
+++ b/juego.html
@@ -11,14 +11,16 @@
   
     </head>
     <body>
+      <div class="container">
+        <div class="puntos"><h2>Tu maxima puntacion es: <span id="points"></span> </h2></div>
 
-
-      <div class="gameboard">
-        <div id="celeste" class="color celeste left" data-color="celeste"></div>
-        <div id="violeta" class="color violeta right" data-color="violeta"></div>
-        <div id="naranja" class="color naranja left" data-color="naranja"></div>
-        <div id="verde" class="color verde right" data-color="verde"></div>
-        <button id="btnEmpezar" class="btn-start" onclick="empezarJuego()">Empezar a jugar!</button>
+        <div class="gameboard">
+          <div id="celeste" class="color celeste left" data-color="celeste"></div>
+          <div id="violeta" class="color violeta right" data-color="violeta"></div>
+          <div id="naranja" class="color naranja left" data-color="naranja"></div>
+          <div id="verde" class="color verde right" data-color="verde"></div>
+          <button id="btnEmpezar" class="btn-start" onclick="empezarJuego()">Empezar a jugar!</button>
+        </div>
       </div>
       <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
       <script src="juego.js"></script>
